--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Person Entry App</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/heroicons/2.1.3/24/outline/hero-icons.min.css" rel="stylesheet">
+  <!-- Heroicons CSS link removed as icons are inline SVGs -->
+
+  <!-- Babel Standalone for JSX/TSX transpilation in browser -->
+  <!-- Make sure to use a version compatible with your React version if issues arise, but 7.24.x is recent -->
+  <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
+
 <script type="importmap">
 {
   "imports": {
@@ -20,7 +24,11 @@
 </head>
 <body class="bg-gray-100">
   <div id="root"></div>
-  <script type="module" src="./index.tsx"></script>
+  <!-- Instruct Babel to transpile this script.
+       data-presets="react,typescript" tells Babel how to transform the code.
+       The src path "./index.tsx" is correct.
+  -->
+  <script type="text/babel" data-presets="react,typescript" src="./index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
-    
