--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
        The src path "./index.tsx" is correct.
   -->
   <script type="text/babel" data-presets="react,typescript" src="./index.tsx"></script>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="./index.tsx"></script>
 </body>
 </html>
