--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   }
 }
 </script>
+<!-- Lien vers index.css supprimé car le fichier n'est pas fourni et Tailwind est utilisé via CDN -->
 <link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-gray-100">
@@ -29,6 +30,7 @@
        The src path "./index.tsx" is correct.
   -->
   <script type="text/babel" data-presets="react,typescript" src="./index.tsx"></script>
-<script type="module" src="./index.tsx"></script>
+  <!-- La balise script dupliquée a été supprimée -->
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
